Add middleware to serve static file

--- a/public/overview.html
+++ b/public/overview.html
@@ -37,8 +37,10 @@
       <nav class="nav nav--user">
         <a href="#" class="nav__el">My bookings</a>
         <a href="#" class="nav__el">
-          <img src="img/user.jpg" alt="User photo" class="nav__user-img" />
-          <span>Jonas</span>
+          <img src="img/users/me.jpg" alt="User photo" class="nav__user-img" />
+          <span>
+            Shownola
+          </span>
         </a>
 
         <!-- <button class="nav__el">Log in</button>
@@ -424,7 +426,7 @@
         <li><a href="#">Contact</a></li>
       </ul>
       <p class="footer__copyright">
-        &copy; by Jonas Schmedtmann. All rights reserved.
+        &copy; by Shownola. All rights reserved. Design by Jonas Schmedtman
       </p>
     </div>
   </body>
