Handle unhandled routes

--- a/public/overview.html
+++ b/public/overview.html
@@ -426,7 +426,7 @@
         <li><a href="#">Contact</a></li>
       </ul>
       <p class="footer__copyright">
-        &copy; by Shownola. All rights reserved. Design by Jonas Schmedtman
+        &copy; Built by Shownola as part of The Complete Bootcamp by Jonas Schmedtman All rights reserved.
       </p>
     </div>
   </body>
